# Naijaeval

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  dataset_proposal.md  metric_proposal.md
.github/workflows/: ci.yml
benchmarks/: coswitch_asr_v1.yaml  naija_mt_v1.yaml
examples/: asr_robustness.py  translation_eval.py
naijaeval/: __init__.py  registry.py
naijaeval/cli/: main.py
naijaeval/data/: __init__.py  domain_terms.py  vocabularies.py
naijaeval/datasets/: __init__.py  loaders.py  registry.py
naijaeval/metrics/: __init__.py  asr.py  base.py  consistency.py  fidelity.py  robustness.py
naijaeval/report/: __init__.py  html_report.py  json_report.py
naijaeval/tasks/: __init__.py  asr.py  base.py  summarisation.py  translation.py
naijaeval/utils/: __init__.py  text.py
tests/unit/: test_metrics_asr.py  test_metrics_consistency.py  test_metrics_fidelity.py  test_metrics_robustness.py  test_registry.py  test_utils.py
